
    Added missing entries for the meta_non_terminal/1 directive and for the
    call//N non-terminal to the "help" example.

    Added a parser for PDDL 3.0 files, contributed by Robert Sasak.

    Added code folding support to the SubEthaEdit text editor. Added code
    folding support for conditional compilation blocks to the Kate, Vim,
    and TextMate text editors.

    Updated the Windows installer in order to detect YAP 64 bits versions.


2.43.0 - July 31, 2011

    Added experimental support for Lean Prolog.

    Changed error reporting by the Logtalk compiler and runtime. All exception
    terms now use, whenever possible, the error(Error, logtalk(Goal, Entity))
    format. Changed the internal error checking to use, whenever practical,
    the new '$lgt_must_be'/2-3 internal predicates.

    Added an "optimize" flag, whose default value is "on". This flag allows
    the user to turn off existing optimizations for e.g. debugging tasks (the
    currently implemented optimizations include the removal of redundant calls
    to true/0 from the body of compiled predicate clauses and the removal of
    redundant calls to (=)/2 from the body of clauses generated by the
    expansion of grammar rules).

    Added a "source_data" flag, whose default value is "on". With this flag
    set to "on", Logtalk will keep the information represented using mode/2,
    info/1-2, uses/2, and use_module/2 directives plus source location data
    (including source file names and line numbers), useful both for debugging
    and for integration with development tools. This flag can be turned off
    in order to generate more compact code. The parameter_names/1 object and
    category property is removed in order to avoid redundancy.

    Implemented protected/1 and private/1 properties for objects, protocols,
    and categories. Together with the public/1 property, these properties
    allows the list of predicates declared in the entity to be accessed for