@@ -14,5 +14,5 @@
 
 :- set_prolog_flag(file_name_variables, true).
 :- silent_consult('$LOGTALKHOME/configs/cx.pl').
-:- silent_consult('$LOGTALKHOME/compiler/logtalk.pl').
 :- silent_consult('$LOGTALKUSER/libpaths/libpaths.pl').
+:- silent_consult('$LOGTALKHOME/compiler/logtalk.pl').
