@@ -13,5 +13,5 @@
 
 
 :- compile('$LOGTALKHOME/configs/sicstus3.pl').
-:- compile('$LOGTALKHOME/compiler/logtalk.pl').
 :- compile('$LOGTALKUSER/libpaths/libpaths.pl').
+:- compile('$LOGTALKHOME/compiler/logtalk.pl').
