@@ -15,5 +15,5 @@
 :- import expand_atom/2 from standard.
 
 :- expand_atom('$LOGTALKHOME/configs/xsb.pl', Config), reconsult(Config).
-:- expand_atom('$LOGTALKHOME/integration/logtalk_comp_xsbmt.pl', Compiler), reconsult(Compiler).
 :- expand_atom('$LOGTALKUSER/libpaths/libpaths.pl', Libpaths), reconsult(Libpaths).
+:- expand_atom('$LOGTALKHOME/integration/logtalk_comp_xsbmt.pl', Compiler), reconsult(Compiler).
